tests/bad/testDeclareWithUndeclared.grc
// Error: Variable 'x' used in assignment before declaration
y := x 